Issue #93 update order edit to be more readable.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -841,8 +841,17 @@ form .column {
 }
 
 .grid-group {
+
+}
+
+.grid-group.three-columns {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: .5fr .5fr .5fr;
+}
+
+.grid-group.two-columns {
+	display: grid;
+	grid-template-columns: .75fr .75fr;
 }
 
 
